--- a/Amazon-clone/style.css
+++ b/Amazon-clone/style.css
@@ -176,23 +176,10 @@ span {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* box-5 */
+/* hero section */
+.hero-section{
+    background-image: url(./assets/hero_image.jpg);
+    background-size: cover;
+    height: 450px;
+    width: 1280px;
+}
