--- a/Amazon-clone/style.css
+++ b/Amazon-clone/style.css
@@ -32,11 +32,11 @@
 
 .border:hover {
     border: 1.5px solid white;
-}
+} 
 
 /* box-2 */
 
-.add-first {
+ .add-first {
     color: #cccccc;
     font-size: 0.85rem;
     margin-left: 20px;
@@ -57,11 +57,11 @@
 .add-icon {
     display: flex;
     align-items: center;
-}
+} 
 
 /* box-3 */
 
-.nav-search {
+ .nav-search {
     display: flex;
     justify-content: space-evenly;
     width: 620px;
@@ -95,7 +95,7 @@
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
     cursor: pointer;
-}
+} 
 
 /* box-4 and box-5 */
 
@@ -126,7 +126,7 @@ span {
 
 /* box-6 */
 
-.nav-cart i {
+ .nav-cart i {
     font-size: 30px;
 }
 
@@ -177,9 +177,24 @@ span {
 
 
 /* hero section */
-.hero-section{
+.hero-section {
     background-image: url(./assets/hero_image.jpg);
     background-size: cover;
-    height: 450px;
-    width: 1280px;
+    height: 350px;
+    width: 100%;
+}
+
+/* cards-section */
+.cards-section{
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #e2e7e6;
+}
+
+
+.box{
+    border: 2px solid black;
+    height: 400px;
+    width: 23%;
+    background-color: white;
 }
